--- a/CarSolutioner/CarSolutioner.vbproj
+++ b/CarSolutioner/CarSolutioner.vbproj
@@ -148,6 +148,18 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Menus\Admin\Partes\Alquileres.vb" />
+    <Compile Include="Forms\Menus\Invitado\MainMenuInvitado.Designer.vb">
+      <DependentUpon>MainMenuInvitado.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Menus\Invitado\MainMenuInvitado.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Menus\Invitado\Partes\Alquileres.vb" />
+    <Compile Include="Forms\Menus\Invitado\Partes\Clientes.vb" />
+    <Compile Include="Forms\Menus\Invitado\Partes\Empleados.vb" />
+    <Compile Include="Forms\Menus\Invitado\Partes\Mantenimiento.vb" />
+    <Compile Include="Forms\Menus\Invitado\Partes\Reservas.vb" />
+    <Compile Include="Forms\Menus\Invitado\Partes\Vehiculos.vb" />
     <Compile Include="Forms\Menus\Sub-Forms\Alquilar.Designer.vb">
       <DependentUpon>Alquilar.vb</DependentUpon>
     </Compile>
@@ -241,6 +253,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Forms\AmaranthMsgbox.resx">
       <DependentUpon>AmaranthMsgbox.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Menus\Invitado\MainMenuInvitado.resx">
+      <DependentUpon>MainMenuInvitado.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Menus\Sub-Forms\Alquilar.resx">
       <DependentUpon>Alquilar.vb</DependentUpon>
